--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,12 @@
 buildscript {
     
     repositories {
-        google()
+        mavenCentral()
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,8 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        mavenCentral()
         jcenter()
+        google()
     }
 }
 
