--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+    }
+
+    // Resolve dependency differences between app and tests
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:27.1.0'
+    }
 }
 
 dependencies {
@@ -30,6 +39,8 @@ dependencies {
     compile 'com.android.support:design:27.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:cardview-v7:27.1.1'
+
+    compile 'com.android.support:multidex:1.0.2'
 
     compile 'gun0912.ted:tedpermission:1.0.3'
 
