--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
+        android:name=".GMRAplication"
         android:allowBackup="true"
         android:icon="@drawable/logo_gmr"
         android:label="@string/app_name"
@@ -40,7 +41,11 @@
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
-            tools:replace="screenOrientation" />
+            tools:replace="screenOrientation"
+            android:stateNotNeeded="true"
+            android:label="@string/app_name"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
 
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
