--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,14 @@ dependencies {
 
     //compile 'me.dm7.barcodescanner:zbar:1.8.4'
 
-    compile 'com.google.zxing:core:3.2.1'
+    /*compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 
-    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.google.android.gms:play-services:9.8.0'*/
+
+    //barcode-scanner
+    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    compile 'com.android.support:multidex:1.0.2'
 
     //implementation 'com.journeyapps:zxing-android-integration:3.2.0@aar'
 
