--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".NirmalAplication"
         android:allowBackup="true"
         android:icon="@drawable/logo_gmr"
         android:label="@string/app_name"
@@ -31,20 +32,30 @@
             android:theme="@style/zxing_CaptureTheme"
             android:windowSoftInputMode="stateAlwaysHidden"></activity>
         -->
-        <activity android:name=".CameraActivity"/>
+        <activity android:name=".CameraActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".SaveBarcodeDataActivity" />
         <activity android:name=".ListActivity" />
-        <activity android:name=".ScanBarcodeActivity"></activity>
-        <activity
+       <!-- <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden"
             tools:replace="screenOrientation" />
 
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
-            android:value="barcode" />
+            android:value="barcode" />-->
+
+        <activity
+            android:name=".ScannerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
